namespace Application.Decorators.TicketDecorator;

public interface ITicketComponent
{
    decimal GetPrice();
    string GetDescription();
}