@startuml

interface ITicketComponent {
    GetPrice(): decimal
    GetDescription(): string
}

class TicketComponent {
    - _event: Event
    + TicketComponent(event: Event)
    + GetPrice(): decimal
    + GetDescription(): string
}

abstract class TicketDecorator {
    # _wrappedTicket: ITicketComponent
    # TicketDecorator(wrappedTicket: ITicketComponent)
    + GetPrice(): decimal
    + GetDescription(): string
}

class EventTypeDecorator {
    # _wrappedTicket: ITicketComponent
    - _type: EventType
    + EventTypeDecorator(\n\twrappedTicket: ITicketComponent, \n\ttype: EventType\n)
    + GetPrice(): decimal
    + GetDescription(): string
}

class TimeDecorator {
    # _wrappedTicket: ITicketComponent
    - _eventStartDate: DateTime
    - _ticketsReleaseDate: DateTime
    - _priceIncreaseFactor: decimal
    + TimeDecorator(\n\twrappedTicket: ITicketComponent, \n\teventStartDate: DateTime, \n\tticketsReleaseDate: DateTime, \n\tpriceIncreaseFactor: decimal\n)
    + TimeDecorator(\n\twrappedTicket: ITicketComponent, \n\teventStartDate: DateTime, \n\tticketsReleaseDate: DateTime, \n\tpriceIncreaseFactor: decimal\n)
    + GetPrice(): decimal
    + GetDescription(): string
}

class FamilyEventDecorator {
    # _wrappedTicket: ITicketComponent
    - _isFamilyFriendly: bool
    + FamilyEventDecorator(\n\twrappedTicket: ITicketComponent, \n\tisFamilyFriendly: bool\n)
    + GetPrice(): decimal
    + GetDescription(): string
}

class BookableSpaceDecorator {
    # _wrappedTicket: ITicketComponent
    - _bookableSpace: BookableSpace
    + BookableSpaceDecorator(\n\twrappedTicket: ITicketComponent, \n\tbookableSpace: BookableSpace\n)
    + GetPrice(): decimal
    + GetDescription(): string
}

ITicketComponent  <|.. TicketComponent
ITicketComponent <|.. TicketDecorator
TicketDecorator o-- ITicketComponent
TicketDecorator <|-- EventTypeDecorator
TicketDecorator <|-- TimeDecorator
TicketDecorator <|-- FamilyEventDecorator
TicketDecorator <|-- BookableSpaceDecorator

@enduml